<?xml version="1.0"?>
<package format="2">
  <name>event_cpp_python_node</name>
  <version>0.0.0</version>
  <description>The event_cpp_python_node package</description>

  <maintainer email="alexzhu@seas.upenn.edu">Alex Zhu</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>dvs_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>rosbag</depend>
  <depend>image_transport</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
